refactor: 줄바꿈, 잘못된 클래스 이름 수정